feat(proto): implement shared protos from common_proto repo
