# gapi/rpc_login_user.go
@@ -4,27 +4,31 @@ import (
 	"context"
 	"database/sql"
 	"encoding/base64"
+	"time"
 
-	pb "github.com/Streamfair/streamfair_idp/pb"
-	pb_login "github.com/Streamfair/streamfair_idp/pb/login"
+	pb "github.com/Streamfair/streamfair_idp/common_proto/IdentityProvider/pb/login"
+	session_pb "github.com/Streamfair/streamfair_idp/common_proto/SessionService/pb"
+	token_pb "github.com/Streamfair/streamfair_idp/common_proto/TokenService/pb"
+	user_pb "github.com/Streamfair/streamfair_idp/common_proto/UserService/pb"
 	"github.com/Streamfair/streamfair_idp/util"
-	pb_session "github.com/Streamfair/streamfair_session_svc/pb/session"
-	pb_user "github.com/Streamfair/streamfair_user_svc/pb/user"
+	session "github.com/Streamfair/streamfair_session_svc/common_proto/SessionService/pb/session"
+	refreshToken "github.com/Streamfair/streamfair_token_svc/common_proto/TokenService/pb/refresh_token"
+	token "github.com/Streamfair/streamfair_token_svc/common_proto/TokenService/pb/token"
+	user "github.com/Streamfair/streamfair_user_svc/common_proto/UserService/pb/user"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
-	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
-func getUser(ctx context.Context, pool *ConnectionPool, address string, username string) (*pb_user.User, error) {
+func getUser(ctx context.Context, pool *ConnectionPool, address string, username string) (*user.User, error) {
 	conn, err := pool.GetConn(address)
 	if err != nil {
 		return nil, status.Errorf(codes.Internal, "failed to connect to UserService: %v", err)
 	}
 
-	client := pb.NewUserServiceClient(conn)
+	client := user_pb.NewUserServiceClient(conn)
 
-	req := &pb_user.GetUserByValueRequest{
+	req := &user.GetUserByValueRequest{
 		Username: username,
 	}
 	resp, err := client.GetUserByValue(ctx, req)
@@ -35,13 +39,13 @@ func getUser(ctx context.Context, pool *ConnectionPool, address string, username
 	return resp.User, nil
 }
 
-func createSession(ctx context.Context, pool *ConnectionPool, address string, args *pb_session.CreateSessionRequest) (*pb_session.Session, error) {
+func createSession(ctx context.Context, pool *ConnectionPool, address string, args *session.CreateSessionRequest) (*session.Session, error) {
 	conn, err := pool.GetConn(address)
 	if err != nil {
 		return nil, status.Errorf(codes.Internal, "failed to connect to SessionService: %v", err)
 	}
 
-	client := pb.NewSessionServiceClient(conn)
+	client := session_pb.NewSessionServiceClient(conn)
 
 	resp, err := client.CreateSession(ctx, args)
 	if err != nil {
@@ -51,13 +55,46 @@ func createSession(ctx context.Context, pool *ConnectionPool, address string, ar
 	return resp.Session, nil
 }
 
-func (server *Server) LoginUser(ctx context.Context, req *pb_login.LoginUserRequest) (*pb_login.LoginUserResponse, error) {
+func createToken(ctx context.Context, pool *ConnectionPool, address string, args *token.CreateTokenRequest) (*token.CreateTokenResponse, error) {
+	conn, err := pool.GetConn(address)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to connect to SessionService: %v", err)
+	}
+
+	client := token_pb.NewTokenServiceClient(conn)
+
+	resp, err := client.CreateToken(ctx, args)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to get user: %v", err)
+	}
+
+	return resp, nil
+}
+
+func createRefreshToken(ctx context.Context, pool *ConnectionPool, address string, args *refreshToken.CreateRefreshTokenRequest) (*refreshToken.CreateRefreshTokenResponse, error) {
+	conn, err := pool.GetConn(address)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to connect to SessionService: %v", err)
+	}
+
+	client := token_pb.NewTokenServiceClient(conn)
+
+	resp, err := client.CreateRefreshToken(ctx, args)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to get user: %v", err)
+	}
+
+	return resp, nil
+}
+
+func (server *Server) LoginUser(ctx context.Context, req *pb.LoginUserRequest) (*pb.LoginUserResponse, error) {
 	poolConfig := &PoolConfig{
 		MaxOpenConnection:     10,
 		MaxIdleConnection:     5,
 		ConnectionQueueLength: 10,
 		Address:               "your_user_service_address",
 		ConfigOptions:         []grpc.DialOption{},
+		IdleTimeout:           10 * time.Second,
 	}
 	pool := NewClientPool(poolConfig)
 
@@ -83,44 +120,44 @@ func (server *Server) LoginUser(ctx context.Context, req *pb_login.LoginUserRequ
 		return nil, status.Errorf(codes.NotFound, "incorrect password.")
 	}
 
-	accessToken, accessPayload, err := server.localTokenMaker.CreateLocalToken(
-		user.Username,
-		server.config.AccessTokenDuration,
-	)
+	accessToken, err := createToken(ctx, pool, "https://streamfair_token_service:9092/streamfair/v1/create_token", &token.CreateTokenRequest{
+		UserId:    user.Id,
+		ExpiresAt: server.config.AccessTokenDuration.String(),
+	})
 	if err != nil {
-		return nil, status.Errorf(codes.Internal, "failed to create access token.")
+		return nil, status.Errorf(codes.Internal, "failed to create access token: %v.", err)
 	}
 
-	refreshToken, refreshPayload, err := server.localTokenMaker.CreateLocalToken(
-		user.Username,
-		server.config.RefreshTokenDuration,
-	)
+	refreshToken, err := createRefreshToken(ctx, pool, "https://streamfair_token_service:9092/streamfair/v1/create_token", &refreshToken.CreateRefreshTokenRequest{
+		UserId:    user.Id,
+		ExpiresAt: server.config.RefreshTokenDuration.String(),
+	})
 	if err != nil {
-		return nil, status.Errorf(codes.Internal, "failed to create refresh token.")
+		return nil, status.Errorf(codes.Internal, "failed to create refresh token: %v.", err)
 	}
 
 	mtdt := server.extractMetadata(ctx)
-	args := &pb_session.CreateSessionRequest{
-		Uuid:         refreshPayload.ID.String(),
+	args := &session.CreateSessionRequest{
+		Uuid:         refreshToken.Payload.Uuid,
 		Username:     user.Username,
-		RefreshToken: refreshToken,
+		RefreshToken: refreshToken.RefreshToken.Token,
 		UserAgent:    mtdt.UserAgent,
 		ClientIp:     mtdt.ClientIP,
 		IsBlocked:    false,
-		ExpiresAt:    timestamppb.New(refreshPayload.ExpiredAt),
+		ExpiresAt:    refreshToken.Payload.ExpiredAt,
 	}
 	session, err := createSession(ctx, pool, "https://streamfair_session_service:9093/streamfair/v1/create_session", args)
 	if err != nil {
 		return nil, status.Errorf(codes.Internal, "failed to create session: %v.", err)
 	}
 
-	rps := &pb_login.LoginUserResponse{
-		User:                  ConvertUser(user),
+	rps := &pb.LoginUserResponse{
+		User:                  user,
 		SessionId:             session.Uuid,
-		AccessToken:           accessToken,
-		RefreshToken:          refreshToken,
-		AccessTokenExpiresAt:  timestamppb.New(accessPayload.ExpiredAt),
-		RefreshTokenExpiresAt: timestamppb.New(refreshPayload.ExpiredAt),
+		AccessToken:           accessToken.Token.Token,
+		RefreshToken:          refreshToken.RefreshToken.Token,
+		AccessTokenExpiresAt:  accessToken.Payload.ExpiredAt,
+		RefreshTokenExpiresAt: refreshToken.Payload.ExpiredAt,
 	}
 
 	return rps, nil
